--- a/index.html
+++ b/index.html
@@ -76,14 +76,16 @@ function topFunction() {
     document.getElementById("icon3").className = "icon3";
     document.getElementById("icon4").className = "icon4";
     document.getElementById("icon5").className = "icon5";
+    document.body.className = "body1";
   });
+
 </script>
 
   </head>
-  <body>
+  <body id="body">
     <div class="" id="load_screen">
       <div class="" id="loading">
-
+        <p>Yüklənir</p>
       </div>
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
